--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,39 @@
+h1 {
+    color: #8067d8;
+}
 
-/* 
+h3 {
+    color: grey;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+li {
+    list-style-type: none;
+    background-color: #e3d6ea;
+    border-top: solid;
+    border-bottom: solid;
+    border-color: #dadadb;
+    border-radius: 2;
+    color:#8067d8
+}
 
-*/
+ul {
+    padding: 0;
+}
+
+p {
+    color: grey;
+    font-size: 10px;
+}
+
+.btn {
+    width: 70px;
+    font-size: xx-small;
+}
+
+.task .fa-regular{
+    visibility: hidden;
+}
+
+.task:hover .fa-regular{
+    visibility: visible;
+}
